# law-kg

./: .env.example  .gitignore  AGENT.md  README.md  compose.yaml  guideline.md  pyproject.toml
configs/: config.json  schema.json
data/: README.md
data-pipeline/link/kg-link/: pyproject.toml
data-pipeline/link/kg-link/resources/: relation_schema.json
data-pipeline/link/kg-link/scripts/: predict_deepke.sh  test_infer_demo.py
data-pipeline/link/kg-link/src/kg_link/: __init__.py  cli.py  dataset.py  deepke_train.py
guideline/: guideline.md
infra/: README.md  __init__.py
infra/llm/: base.py  factory.py
kg-build/: README.md  pyproject.toml
kg-build/resources/: models.json  regex_patterns.json  schema.json  thresholds.json
kg-build/scripts/: README.md  export_neo4j_csv.py  import_into_neo4j.sh  import_neo4j.cypher
kg-build/src/kg_build/: __init__.py  cli.py  common.py
kg-build/src/kg_build/config/: __init__.py  loader.py
kg-build/src/kg_build/contracts/: __init__.py  graph.py
kg-build/src/kg_build/io/: __init__.py  docx_reader.py  json_store.py  manifest_store.py
kg-build/src/kg_build/llm/: __init__.py  client.py  config.py  tasks.py
kg-build/src/kg_build/pipeline/: __init__.py  builder.py  executor.py
kg-build/src/kg_build/stages/: __init__.py  aggr.py  conv.py  dedup.py  embed.py  extract.py  ingest.py  link.py  pred.py  segment.py  serialize.py  summarize.py
kg-build/src/kg_build/utils/: __init__.py  locator.py  numbers.py  progress.py  semantics.py
kg-link/: README.md  pyproject.toml
kg-link/scripts/: train_deepke.sh
kg-link/src/kg_link/: api.py  cli.py  contracts.py  io.py
lib/: README.md
lib/llm/: __init__.py
resources/: schema.json
scripts/: README.md  build  build-batch  builder  check_import_completeness.py  crawler  export  import_kg_data.py  import_raw_data.py  import_raw_data_to_es.py  import_to_databases.py  interprets-filter  interprets_filter_build_dataset  interprets_filter_download  interprets_filter_predict  interprets_filter_train  model_asset  split_export  verify_import.py
src/builder/: __init__.py  cli.py
src/crawler/: __init__.py  cli.py  client.py  flk_api.py  io.py  logging_utils.py  models.py  pipeline.py  storage.py
src/interprets_filter/: __init__.py  api.py  candidates.py  cli.py  config.py  dataset.py  distill.py  hub.py  io.py  predict.py  train.py
src/ner/: __init__.py  api.py  cli.py  dataset.py  predict.py  train.py
src/relation_classifier/: __init__.py  api.py  cli.py  dataset.py  predict.py  train.py
src/rgcn/: __init__.py  api.py  cli.py  dataset.py  predict.py  train.py
tests/: test_crawler_api.py  test_crawler_client.py  test_crawler_pipeline.py  test_crawler_storage.py  test_explicit_relations.py  test_normalize.py  test_pipeline.py  test_schema.py
utils/: README.md
utils/llm/: base.py  (+2 more)
web-app/: .env.example  .gitignore  README.md  compose.yaml  deploy.sh
web-app/backend/api/kg-api/: .env.example  pyproject.toml
web-app/backend/api/kg-api/src/kg_api/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
web-app/backend/api/kg-api/src/kg_api/core/: auth.py
web-app/backend/api/kg-api/src/kg_api/routes/: __init__.py  auth.py  documents.py  graph.py  laws.py  recommendations.py  system.py
web-app/backend/api/kg-api/src/kg_api/services/recommendation/: ai_keyword_extractor.py  ai_recommender.py  hybrid_recommender.py  neo4j_store.py  provision_lookup.py  recommendation_cache.py  rrf_fusion.py
web-app/backend/api/kg-api/src/kg_api/utils/: xml_parser.py
(+202 files in other folders)
