[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "law-kg"
version = "0.1.0"
description = "Five-stage legal knowledge graph builder."
requires-python = ">=3.10"
dependencies = [
  "accelerate==1.13.0",
  "datasets>=4.8.4",
  "huggingface_hub>=1.0.0,<2",
  "httpx==0.28.1",
  "pandas>=2.3.3",
  "python-docx==1.2.0",
  "rich==14.1.0",
  "scikit-learn>=1.7.2",
  "torch==2.11.0",
  "tqdm>=4.67.3",
  "transformers==5.5.0",
]

[project.scripts]
builder = "builder.cli:main"
crawler = "crawler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
