[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-link"
version = "0.1.0"
description = "Relation-linking toolkit for legal document graphs and DeepKE integration."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
train = [
  "accelerate>=1.1.0",
  "torch",
  "transformers>=4.39.0",
  "datasets>=2.18.0",
  "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
